--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,10 @@
   ],
   "description": "A simple html/scss framework powered by Gulp for my projects",
   "dependencies": {
-    "neat"                         : "latest",
-    "bourbon"                      : "latest",
     "html5shiv"                    : "latest",
-    "jquery"                       : "latest"
+    "jquery"                       : "latest",
+    "Magnific-Popup"               : "latest",
+    "slick-carousel"               : "latest"
   }
 }
 
